# open-memory-lane

./: .config.yml  CHANGELOG.md  README.md  client.py  main.py  package.json  pyproject.toml  start.bat  start_app.py
app/: __init__.py  app.py  logger.py
app/client/: __init__.py  client.py  helpers.py
app/db/: __init__.py
app/db/sql/: archive_db.py  common.py  main_db.py
app/helpers/: config.py  copy.py  db.py  general.py  lockfile.py  paths.py  screenshot.py  video.py  win.py
app/workers/: __init__.py
app/workers/backup/: __init__.py  worker.py
app/workers/capture/: __init__.py  worker.py
app/workers/client/: __init__.py  worker.py
app/workers/db_writer/: __init__.py  helpers.py  worker.py
app/workers/video_writer/: __init__.py  worker.py
client/: index.html
templates/: index.html
